Added new fields
